add batch types feature and fix redis cache bug
batch types:
- new REST API /api/batch-types with full CRUD
- added BatchTypeController implementing the generated OpenAPI interface
- updated openapi.yaml with batch-types paths, BatchType/BatchTypeInput schemas
- ApiModelMapper extended with batch-type conversion methods
- BatchTypeService: create/update/delete evict cache; getById cached; getAll reads DB directly

redis fix:
- list endpoints (classes, mentors, sessions, students, batch-types) were returning 400
  on every second request — cache hit caused Jackson deserialization failure
- root cause: JsonTypeInfo.As.PROPERTY can't embed type metadata into JSON arrays,
  so List<T> values stored in Redis couldn't be read back as Object
- removed @Cacheable from all getAll* methods; by-id methods still cache normally
- changed type inclusion to WRAPPER_ARRAY in RedisConfig for safer object caching

frontend:
- batch types list, detail, create and edit pages added
- create/edit batch forms now use a dropdown to pick batch type instead of a raw id field
- navbar updated with batch types link

docs:
- README and PROJECT_DOCUMENTATION updated with batch types API examples
- docs/REDIS_CACHE_FIX.md added explaining the serialization issue and fix