@@ -13,41 +13,57 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-/**
- * Service for BatchType operations
- */
 @Service
 @RequiredArgsConstructor
 @Slf4j
 public class BatchTypeService {
-    
+
     private final BatchTypeRepository batchTypeRepository;
     private final BatchTypeMapper batchTypeMapper;
-    
+
     @Transactional(readOnly = true)
-    @Cacheable(value = "batchTypes", key = "'all'", unless = "#result == null || #result.isEmpty()")
     public List<BatchTypeDTO> getAllBatchTypes() {
         return batchTypeRepository.findAll().stream()
             .map(batchTypeMapper::toDTO)
-            .collect(Collectors.toList());
+            .toList();
     }
-    
+
     @Transactional(readOnly = true)
     @Cacheable(value = "batchType", key = "'batchType:' + #id", unless = "#result == null")
     public BatchTypeDTO getBatchTypeById(Long id) {
-        BatchType batchType = batchTypeRepository.findById(id)
-            .orElseThrow(() -> new BatchTypeNotFoundException(id));
-        return batchTypeMapper.toDTO(batchType);
+        return batchTypeMapper.toDTO(fetchOrThrow(id));
     }
-    
+
     @Transactional
     @CacheEvict(value = {"batchType", "batchTypes"}, allEntries = true)
-    public BatchTypeDTO createBatchType(BatchTypeDTO dto) {
-        BatchType batchType = batchTypeMapper.toEntity(dto);
-        BatchType saved = batchTypeRepository.save(batchType);
-        log.info("BatchType created with id: {}", saved.getId());
-        return batchTypeMapper.toDTO(saved);
+    public BatchTypeDTO createBatchType(BatchTypeDTO request) {
+        BatchType persisted = batchTypeRepository.save(batchTypeMapper.toEntity(request));
+        log.info("BatchType created with id={}", persisted.getId());
+        return batchTypeMapper.toDTO(persisted);
+    }
+
+    @Transactional
+    @CacheEvict(value = {"batchType", "batchTypes"}, allEntries = true)
+    public BatchTypeDTO updateBatchType(Long id, BatchTypeDTO request) {
+        BatchType existing = fetchOrThrow(id);
+        existing.setName(request.getName());
+        BatchType persisted = batchTypeRepository.save(existing);
+        log.info("BatchType updated id={}", id);
+        return batchTypeMapper.toDTO(persisted);
+    }
+
+    @Transactional
+    @CacheEvict(value = {"batchType", "batchTypes"}, allEntries = true)
+    public void deleteBatchType(Long id) {
+        fetchOrThrow(id);
+        batchTypeRepository.deleteById(id);
+        log.info("BatchType deleted id={}", id);
+    }
+
+    // -------------------------------------------------------------------------
+
+    private BatchType fetchOrThrow(Long id) {
+        return batchTypeRepository.findById(id).orElseThrow(() -> new BatchTypeNotFoundException(id));
     }
 }
